src/main/java/com/revolvingmadness/testing/language/errors/LexError.java
package com.revolvingmadness.testing.language.errors;

public class LexError extends Error {
    public LexError(String message) {
        super(message);
    }
}
